# windows-bt-battery-time-estimator-rs

./: Cargo.toml  LICENSE  README.md  app.rc  build.rs  create_icon.py
.cursor/rules/: bluetooth-integration.mdc  build-and-deployment.mdc  project-overview.mdc  rust-development.mdc  slint-ui-development.mdc
src/: bluetooth_battery.rs  main.rs  uwp_bluetooth.rs  windows_rfcomm.rs
ui/: appwindow.slint
windows-bt-battery-estimator/: Cargo.toml
windows-bt-battery-estimator/src/: main.rs
windows-bt-battery-estimator/ui/: appwindow.slint
