[package]
name = "windows-bt-battery-estimator"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
btleplug = { version = "0.11", features = ["serde"] }
lazy_static = "1.4"
uuid = "1.0"
anyhow = "1.0"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_Bluetooth",
    "Win32_System_Com",
    "Win32_System_Wmi",
    "Win32_System_Performance",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_NetworkManagement_WiFi",
    "Win32_Networking_WinSock",
] }
bluer = { version = "0.17", optional = true }
socket2 = "0.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsock2", "ws2def", "ws2tcpip"] }

[build-dependencies]
slint-build = "1.8" 