[package]
name = "windows-bt-battery-estimator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "1.2" } # Removed eventloop feature
btleplug = "0.11"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
slint-build = "1.2"
